# snaprag

./: .dockerignore  .gitignore  .gitmodules  CAST_QUERY_GUIDE.md  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  LIBRARY_API.md  LIBRARY_USAGE.md  LICENSE  Makefile  Makefile.docker  OLLAMA_SETUP.md  POSTGRES_OPTIMIZATION_300GB.sql  QUERY_FEATURES_ROADMAP.md  QUICKSTART.md  RAG_ARCHITECTURE.md  RAG_COMPLETION_CHECKLIST.md  RAG_USAGE.md  README.md  SESSION_SUMMARY.md  SYNC_STRATEGY.md  build.rs  check_indexes.sh  config.example.toml  config.test.toml  docker-compose.dev.yml  docker-compose.yml  drop_reactions_indexes.sh  optimize_for_bulk_sync.sh  payment.example.toml  prometheus.yml  restore_normal_config.sh  rust-toolchain.toml  rustfmt.toml  test_text_preprocessing
.cursor/rules/: ci-cd.mdc  notification.mdc  rust-standards.mdc  snaprag-rules.mdc
.github/: dependabot.yml
.github/workflows/: README.md  auto-update-prs.yml  ci.yml  pr.yml  release.yml  test-fast.yml
examples/: backfill_important_users_links.rs  chat_api_example.sh  custom_pipeline.rs  payment_monitor.rs  payment_server.rs  rag_query.rs  semantic_search.rs  simple_query.rs  test_link_parsing.rs  test_payment_client.rs
examples/api-tester/: .gitignore  Cargo.toml  Makefile  README.md  SETUP.md  Trunk.toml  index.html
examples/api-tester/js/: wallet.js
examples/api-tester/src/: api.rs  main.rs  payment.rs  wallet.rs
migrations/: 000_complete_init.sql  001_initial_schema.sql  001_performance_indexes.sql  002_update_vector_dimensions.sql  003_cast_embeddings.sql  004_add_tracking_columns.sql  005_prepare_links_resync.sql  006_add_reactions_and_verifications.sql  007_fix_composite_constraints.sql  008_profiles_append_only.sql  008_profiles_event_sourcing.sql
scripts/: README.md  backfill_links_manual.sh  build_server_gpu.sh  build_with_gpu.sh  check_ollama.sh  check_ollama_config.sh  create_performance_indexes.sh  docker-quick-start.sh  optimize_ec2_memory.sh  optimize_for_300gb_ram.sql  optimize_for_346gb_ram.sql  optimize_vector_indexes.sql  optimize_vectors.sh  postgresql_turbo_config.sql  quick_index_rebuild.sql  run_strict_tests.sh  run_update_dim.sh  setup_guide.sh  setup_ollama_remote.sh  start_ollama_tunnel.sh  test-docker-build.sh  turbo_mode_disable.sql  turbo_mode_enable.sql  turbo_mode_ultra.sql  unlogged_mode_disable.sql  unlogged_mode_enable.sql  update_to_768dim.sql  update_vector_dim.sql  verify-docker.sh
src/: config.rs  config_tests.rs  database.rs  errors.rs  errors_tests.rs  errors_unit_tests.rs  grpc_client.rs  lib.rs  logging.rs  main.rs  models.rs  models_tests.rs  models_unit_tests.rs  personality.rs  personality_ml.rs  social_graph.rs
src/api/: backend_api_key.rs  cache.rs  cache_proxy.rs  handlers.rs  handlers_old.rs  mcp.rs  metrics.rs  mod.rs  payment_middleware.rs  pricing.rs  redis_client.rs  routes.rs  server.rs  session.rs  types.rs
src/api/handlers/: chat.rs  mbti.rs  metrics.rs  mod.rs  profile.rs  rag.rs  search.rs  stats.rs
src/cli/: commands.rs  handlers.rs  init_handler.rs  mod.rs  output.rs
src/cli/handlers/: ask.rs  ask_handler.rs  cast.rs  data.rs  embeddings.rs  fastsync.rs  fetch.rs  index.rs  info.rs  init.rs  mbti.rs  mod.rs  rag.rs  serve.rs  social.rs  sync.rs
src/cli/handlers/ask/: args.rs  llm.rs  mod.rs  output.rs  retrieval.rs
src/database/: casts.rs  links.rs  mod.rs  schema.rs  sync.rs  user_activity.rs  user_data.rs  user_data_changes.rs  user_profiles.rs  user_snapshots.rs  username_proofs.rs
src/embeddings/: backfill.rs  cast_backfill.rs  client.rs  generator.rs  local_gpu.rs  migration.rs  mod.rs  multi_vector.rs  multiprocess.rs  service_factory.rs  text_preprocessing.rs
src/llm/: client.rs  mod.rs  prompts.rs  streaming.rs
src/rag/: cast_retriever.rs  context.rs  mod.rs  pipeline.rs  prompts.rs  retriever.rs
src/sync/: client.rs  lazy_loader.rs  lock_file.rs  mod.rs  process_monitor.rs  service.rs  shard_processor.rs  state_manager.rs  types.rs  types_tests.rs
src/sync/service/: coordinator.rs  lifecycle.rs  mod.rs  monitoring.rs  state.rs
src/sync/shard_processor/: batch.rs  batch.rs.bak2  batch_types.rs  cast_handlers.rs  message_handlers.rs  message_handlers_test.rs  mod.rs  types.rs  utils.rs
src/sync/shard_processor/handlers/: frame.rs  link.rs  mod.rs  reaction.rs  system.rs  user_data.rs  username.rs  verification.rs
src/tests/: batch_insert_test.rs  cross_batch_duplicates_test.rs  database_tests.rs  deterministic_blocks_test.rs  event_sourcing_test.rs  grpc_shard_chunks_test.rs  integration_sync_test.rs  message_types_test.rs  mod.rs  rag_integration_test.rs  real_data_test.rs  strict_test_config.rs  strict_test_runner.rs  strict_test_validation.rs  strict_validation_tests.rs  unit_tests.rs
tests/: api_tests.rs  integration_test.rs  mbti_basic_tests.rs  mbti_ml_tests.rs  message_types_integration.rs  payment_tests.rs
