[package]
name = "snaprag"
version = "0.1.0"
edition = "2021"
description = "A Farcaster data synchronization and RAG (Retrieval-Augmented Generation) library"
license = "MIT"
repository = "https://github.com/your-org/snaprag"
keywords = ["farcaster", "rag", "synchronization", "database", "vector-search"]
categories = ["database", "web-programming", "data-structures"]

# Library configuration
[lib]
name = "snaprag"
path = "src/lib.rs"

# Binary configuration
[[bin]]
name = "snaprag"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
pgvector = { version = "0.3", features = ["sqlx", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
config = "0.14"
url = "2.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
protobuf = "2.28"
http = "1.0"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.0"
clap = { version = "4.0", features = ["derive"] }
tonic = "0.10"
prost = "0.12"
libc = "0.2"
futures = "0.3"

[build-dependencies]
protobuf-codegen-pure = "2.28"
tonic-build = "0.10"

[lints.rust]
# Ignore warnings from generated protobuf code
unused_lifetimes = "allow"
elided-lifetimes-in-paths = "allow"
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"

# Strict settings for tests
[profile.test]
# Enable debug info for better test debugging
debug = true
# Enable overflow checks for tests
overflow-checks = true

# Strict clippy configuration for tests
[lints.clippy]
# Allow warnings in generated code but be strict in our code
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some specific warnings that are common in test code
unused_io_amount = "allow"
unused_self = "allow"
# Allow warnings in generated protobuf code
unused_variables = "allow"
unused_imports = "allow"

